fixed aside overlap and changed favicon

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ nav {
   box-shadow: 0 20px 10px rgba(0, 0, 0, 0.233);
   color: rgb(22, 151, 237);
   padding: 1em;
+  z-index: 100;
 }
 
 .logo {
@@ -81,7 +82,7 @@ nav ul li {
   }
   body {
     grid-template-columns: 1fr;
-    padding: 0 4%; /* ez szorítja össze a képet */
+    padding: 0; /* ez szorítja össze a képet */
   }
   aside {
     position: fixed;
@@ -101,21 +102,21 @@ nav ul li {
 
 aside {
   position: sticky;
-  top: calc(50vh - 355px); /* A viewport közepére állítjuk */
+  top: 11vh; /* A viewport közepére állítjuk */
   height: auto; /* Ha nem adsz meg fix magasságot, alkalmazkodik a tartalomhoz */
   align-self: start;
-  border: 2px solid #c1bcbc;
+  border: 2px solid #aee5f0;
   box-shadow: 0 20px 10px rgba(0, 0, 0, 0.233);
   grid-area: sidebar;
-  background-color: rgb(213, 201, 201);
+  background-color: #aee5f0;
 }
 @keyframes slideInLeft {
   from {
-    transform: translateX(100%);
+    transform: translateZ(100%);
     opacity: 0;
   }
   to {
-    transform: translateX(-10%);
+    transform: translateZ(-20%);
     opacity: 1;
   }
 }
@@ -218,18 +219,18 @@ footer {
   background-color: #333;
   color: #fff;
   text-align: center;
-  padding: 20px;
+  padding: 5px;
 }
 .footer h2 {
-  margin-bottom: 15px;
-  font-size: 1.5em;
+  margin-bottom: 5px;
+  font-size: 1em;
 }
 
 .footer a {
   color: #fff;
   text-decoration: none;
   display: inline-block;
-  font-size: 1.2em;
+  font-size: 0.8em;
   border-radius: 3px;
   transition: background-color 0.3s, color 0.3s;
 }
